# upstream-jira-sync

./: .gitignore  CHANGELOG.md  CONTRACTS.md  CONTRIBUTING.md  README.md  action.yml  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: conftest.py  mock_server.py  test_ai.py  test_config.py  test_digest.py  test_github.py  test_jira.py  test_orchestrator.py  test_privacy.py  test_resolver.py  test_state.py
tests/fixtures/: config.test.yaml
upstream_jira_sync/: __init__.py  adf.py  ai.py  cli.py  config.py  digest.py  emailer.py  github.py  http.py  jira.py  models.py  orchestrator.py  override_gate.py  resolver.py  review_activity.py  rfc_epics.py  skill_loader.py  sprint.py  state.py  tagging.py  teams.py
upstream_jira_sync/llm/: __init__.py  anthropic.py  base.py  vertex.py
upstream_jira_sync/skills/: issue_claim_classifier.md  issue_dedup_matcher.md  issue_summarizer.md  low_conf_email.md  review_activity_intro.md  rfc_classifier.md  story_point_estimation.md  team_classification.md  ticket_matcher.md  weekly_digest_summary.md
